--- a/style.css
+++ b/style.css
@@ -758,3 +758,788 @@ a.openModal {
 a {
     text-decoration: none;
 }
+
+@import url(https://fonts.google.com/specimen/Kumbh+Sans);
+
+:root {
+    --orange: hsl(26, 100%, 55%);
+    --pale-orange: hsl(25, 100%, 94%);
+    --very-dark-blue: hsl(220, 13%, 13%);
+    --dark-grayish-blue: hsl(219, 9%, 45%);
+    --grayish-blue: hsl(220, 14%, 75%);
+    --light-grayish-blue: hsl(223, 64%, 98%);
+    --white: hsl(0, 0%, 100%);
+    --black: hsl(0, 0%, 0%);
+    --black-modal: hsla(0, 0%, 0%, 0.5);
+    --font: "Kumbh Sans", sans-serif;
+  }
+  
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: "kumbh Sans", sans-serif;
+
+}
+
+
+/* Carrusel */
+
+.producto{
+    display: flex;
+    padding: 47px;
+}
+
+.container1,
+.container2{
+    width: 50%;
+}
+
+.reference__product-quantity{
+    display: flex;
+    gap: 2rem;
+    margin-top: 4rem
+
+}
+
+
+
+.main{
+    width: 446px;
+    /*border: 1px solid black;*/
+    margin: auto;
+    position: relative;
+}
+@media (min-width: 1115px){
+    .main{
+        width: 1115px;
+    }   
+}
+.header{
+   /* border: 1px solid red;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 68px;
+    padding:0 24px ;
+}
+@media (min-width: 1115px){
+    .header{
+        height: 112px;
+        border-bottom: 1px solid var(--grayish-blue);
+    }  
+}
+.header__navegador{
+    width: 175px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+@media (min-width: 1115px){
+    .header__navegador{
+        width: 590px;
+    } 
+}
+.menu:hover{
+    cursor: pointer;
+}
+@media (min-width: 1115px){
+    .menu{
+        display: none;
+    } 
+}
+.header__cart-profile{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 70px;
+}
+@media (min-width: 1115px){
+    .header__cart-profile{
+        width:121px ;
+    } 
+}
+.header_cart:hover{
+    position: relative;
+    cursor: pointer;
+}
+
+.header_cart--notification{
+    display: none;
+    background-color: var(--orange);
+    width: 15px;
+    height: 12px;
+    border-radius: 16px;
+    position: absolute;
+    top: -2px;
+    right: -5px;
+    font-size: 0.6em;
+    text-align: center;
+    color: var(--white);
+}
+.avatar{ 
+    width: 24px;
+}
+@media (min-width: 1115px){
+    .avatar{
+        width:48px ;
+    } 
+}
+.avatar:hover{
+cursor: pointer;
+    border: 2px solid var(--orange);
+    border-radius: 50%;
+}
+
+/*nav*/
+.iconos-head{
+    display: none;
+    width: 400px;
+    
+} 
+.iconos-head__items{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+.iconos-head__link{
+    text-decoration: none;
+    color: var(--dark-grayish-blue);
+    display: block;
+    height: 112px;
+    padding-top: 42px;
+}
+@media (min-width: 1115px){
+    .iconos-head{
+        display: block;
+    } 
+}
+
+.iconos-head__link:hover{
+    border-bottom: 4px solid var(--orange);
+}
+.head-background{
+    /*background-color: var(--black-modal);*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+   /*  display: grid;
+    place-content: center; */
+}
+.iconos-head2{
+    background-color: var(--white);
+    width: 250px;
+    height: 100%;
+    padding: 28px 24px;
+     display: none;
+}
+.iconos-head__item{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+    list-style: none;
+    margin-top: 50px;
+}
+.iconos-head__link{
+    text-decoration: none;
+    color: var(--very-dark-blue);
+    font-weight: 700;
+    font-size: 1.1em;
+}
+.iconos-head__close-icon:hover{
+    cursor: pointer;
+}
+
+/*.mixin{
+    background-color: var(--black-modal);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+
+}*/
+/*mixin{
+background-color: var(--white);
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    border-radius: 50%;
+    position: absolute;
+    top: 170px;
+    left: 15px;
+}*/
+.tunnel{
+    width: 446px;
+    
+}
+.tunnel__image-container{
+    height: 300px;
+    width: 100%;
+    background-image:url("./coleccion-hombres/a1.webp");
+    background-position-y:-35px ;
+    background-size: cover;
+}
+@media (min-width: 1115px){
+    .tunnel__image-container{
+        background-position-y:0px ;
+        border-radius: 16px;
+        height: 446px;
+        margin-bottom: 32px;
+        
+    } 
+}
+
+.tunnel__previous{
+    background-color: var(--white);
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    border-radius: 50%;
+    position: absolute;
+    top: 180px;
+    left: 15px;
+   
+}
+.tunnel__previous:hover{
+    cursor: pointer;
+}
+
+@media (min-width: 1115px){
+    .tunnel__previous{
+        background-position-y:0px ;
+        border-radius: 16px;
+        height: 446px;
+        margin-bottom: 32px;
+        display: none;
+    } 
+}
+
+
+.tunnel__next{
+    background-color: var(--white);
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    border-radius: 50%;
+    position: absolute;
+    top: 180px;
+    left: 320px;  
+}
+.tunnel__next:hover{
+    cursor: pointer;
+}
+@media (min-width: 1115px){
+    .tunnel__next{
+        display: none;
+    } 
+}
+
+/* .tunnel__thumnails{
+    display: none;
+} */
+@media (min-width: 1115px){
+    .tunnel__thumnails{
+        display: flex;
+        justify-content: space-between;
+        
+    } 
+}
+.tunnel__thumnail{
+    width: 90px;
+    border-radius: 16px;
+}
+.tunnel__thumnail:hover{
+    cursor: pointer;
+    border: 2px solid var(--orange);
+}
+.references{
+    padding: 24px;
+
+}
+@media (min-width: 1115px){
+    .references{
+        width: 446px;
+        padding-top: 60px;
+    } 
+}
+
+
+.reference__company{
+    color: var(--orange);
+    text-transform: uppercase;
+    font-size: 0.8em;
+    letter-spacing: 1px;
+    margin-bottom: 12px;
+}
+.reference__title{
+    font-size: 1.7em;
+    margin-bottom: 16px;
+}
+@media (min-width: 1115px){
+    .reference__title{
+        font-size: 1.7em;
+        margin-bottom: 48px;
+    } 
+}
+.reference__description{
+    font-size: 0.94em;
+    color: var(--dark-grayish-blue);
+    line-height: 24px;
+    margin-bottom: 24px;   
+}
+@media (min-width: 1115px){
+    .reference__description{
+        font-size: 0.9em;
+        margin-bottom: 37px;
+        
+    } 
+}
+.reference__prices{
+    
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+    align-items: center;
+}
+@media (min-width: 1115px){
+    .reference__prices{
+        flex-direction: column;
+        align-items: flex-start;
+        
+    } 
+}
+.reference_now{
+    font-size: 1.8em;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+.details_discount{
+    font-size: 0.5em;
+    background-color: var(--pale-orange);
+    color: var(--orange);
+    padding: 4px;
+    border-radius: 4px;
+}
+.reference__before{
+    font-weight: 700;
+    color: var(--dark-grayish-blue);
+    text-decoration: line-through;
+}
+.reference__product-quantity{
+    @media (min-width: 1115px){
+        display: flex;
+        gap: 32px;
+
+    }
+}
+.input{
+    height: 57px;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--light-grayish-blue);
+}
+.input__minus{
+    width: 25px;
+    height: 100%;
+    padding:  24px 5px;
+}
+.input__minus:hover{
+    cursor: pointer;
+}
+.input__number{
+    width: 100%;   
+    border: none;
+    background-color: var(--light-grayish-blue);
+    font-size: 1.2em;
+    font-weight: 700;
+    font-family: var(--font);
+    text-align: center;
+    outline: none;
+}
+.input__plus{
+    width: 25px;
+    height: 100%;
+    padding:  19px 3px;
+}
+.input__plus:hover{
+    cursor: pointer;
+}
+.reference__button{
+    background-color: var(--orange);
+    width: 100%;
+    height: 57px;
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    font-size: 0.9em;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+.reference__button:hover{
+    cursor: pointer;
+    opacity: 0.7;
+}
+.truck-modal{
+    display: none;
+    border:  1px solid blue;
+    width: 360px;
+    height: 260px;
+    border-radius: 8px;
+    box-shadow: 3px 3px 10px;
+    position: absolute;
+    top: 75px;
+    right: 6px;
+    background-color: var(--white);
+}
+.truck-modal__title{
+    font-weight: 700;
+    padding: 24px;
+    border-bottom: 1px solid var(--grayish-blue);
+
+}
+.truck_modal__checkout-container{
+    padding: 24px;
+}
+.truck_modal__deatils-container{
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+    color: var(--dark-grayish-blue);
+}
+.truck-modal__image{
+    width: 50px;
+    /*height: 50px;*/
+    border-radius: 4px;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 24px;
+}
+.truck-modal__price span{
+    font-weight: 700;
+    color: var(--black);
+
+}
+.delete:hover{
+    cursor: pointer;
+}
+.truck-modal__delete{
+    background-color: var(--orange);
+    width: 100%;
+    height: 57px;
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    font-size: 0.9em;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+.truck-modal__delete:hover{
+    cursor: pointer;
+}
+.matter{
+    @media (min-width: 1115px){
+        display: flex;
+        padding: 90px 50px;
+        gap: 124px;
+        
+    }
+}
+.modal-tunnel__background{
+    width: 550px;
+    
+}
+.modal-tunnel__background{ 
+    background-color: var(--black-modal);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+    /*display: grid;*/
+    place-content: center;
+}
+.modal-tunnel__close-container{
+    text-align: right;
+    height: 30px;
+}
+.modal-tunnel__close{
+    width: 16px;
+}
+.modal-tunnel__close:hover{
+    cursor: pointer;
+    content: url("./images/icon-close-orange.svg");
+}
+.modal-tunnel__image-container{
+    background-image: url("./images/image-product-1.jpg");
+    height: 446px;
+    width: 446px;
+    background-size: cover;
+    border-radius: 16px;
+    margin-bottom: 32px;
+    position: relative;
+}
+.modal-tunnel__thumnails{
+     display: flex;
+     justify-content: space-between;
+     width: 410px;
+     margin: auto;
+} 
+.modal-tunnel__thumnail{
+    width: 90px;
+    border-radius: 16px;
+}
+.modal-tunnel__thumnail:hover{
+    cursor: pointer;
+    border: 2px solid var(--orange);
+}
+.modal-tunnel__previous{
+    background-color: var(--white);
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    border-radius: 50%;
+    position: absolute;
+    top: 190px;
+    left: 15px;
+    
+}
+.modal-tunnel__previous:hover{
+    cursor: pointer;
+}
+@media (min-width: 1115px){
+    .modal-tunnel__previous{
+        display: block;
+    } 
+ }
+.modal-tunnel__next{
+    background-color: var(--white);
+    width: 40px;
+    height: 40px;
+    padding: 12px;
+    border-radius: 50%;
+    position: absolute;
+    top: 190px;
+    left: 400px;  
+}
+.modal-tunnel__next:hover{
+    cursor: pointer;
+}
+
+@media (min-width: 1115px){
+.modal-tunnel__next{
+    display: block;
+    } 
+}
+
+
+/* Trabajo Alejandro */
+.contendor-productos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+
+
+/* Carrusel */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/*  */
+
+/*Efecto*/
+.modalmask {
+    position: fixed;
+    font-family: Arial, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+.modalmask:target {
+    opacity:1;
+    pointer-events: auto;
+}
+
+/*Formato de la ventana*/
+.modalbox{
+    width: 400px;
+    position: relative;
+    padding: 5px 20px 13px 20px;
+    background: #fff;
+    border-radius:3px;
+    -webkit-transition: all 500ms ease-in;
+    -moz-transition: all 500ms ease-in;
+    transition: all 500ms ease-in;
+     
+}
+
+/*Movimientos*/
+.movedown {
+    margin: 0 auto;
+}
+.rotate {
+    margin: 10% auto;
+    -webkit-transform: scale(-5,-5);
+    transform: scale(-5,-5);
+}
+.resize {
+    margin: 10% auto;
+    width:0;
+    height:0;
+ 
+}
+.modalmask:target .movedown{       
+    margin:10% auto;
+}
+.modalmask:target .rotate{     
+    transform: rotate(360deg) scale(1,1);
+        -webkit-transform: rotate(360deg) scale(1,1);
+}
+ 
+.modalmask:target .resize{
+    width:400px;
+    height:200px;
+}
+
+/*Boton de cerrar*/
+.close {
+    background: #606061;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: 1px;
+    text-align: center;
+    top: 1px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius:3px;
+ 
+}
+ 
+.close:hover {
+    background: #FAAC58;
+    color:#222;
+}
+
+
+/*  */
+
+
+.contendor-productos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+.producto-imagen {
+    max-width: 100%;
+}
+
+
+
+.otherImages {
+    display: flex;
+    width: 100%;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.imagen1,
+.imagen2,
+.imagen3,
+.content-imagen1 {
+    display: flex;
+    margin: 0;
+}
+
+.close-button {
+    justify-content: end;
+    display: flex;
+    margin: 1rem 0;
+    width: 20%;
+}
+
+a.openModal { 
+    margin: 1em auto; 
+    display: block; 
+    width: 200px; 
+    background: #ccc; 
+    text-align: center; 
+    text-decoration: none; 
+    color: black; 
+    padding: 10px; 
+    text-shadow: 0 1px 0 #fff; 
+    border: 1px solid rgba(0,0,0,0.1); 
+    box-shadow: 0 1px 1px rgba(0,0,0,0.3); 
+}
+
+
+
+
+.itemCarrusel {
+    height: 300px;
+    position: relative;
+}
+
+.tarjetaCarrusel {
+    background-color: blanchedalmond;
+    height: 100%;
+}
+
+.flechasCarrusel {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+#contentItemsCarrusel {
+    height: 300px;
+    overflow: hidden;
+    width: 100%;
+}
+
+ 
+
+a {
+    text-decoration: none;
+}
+
